cmake_minimum_required(VERSION 3.27)
project(Samsung_26_H1)

set(CMAKE_CXX_STANDARD 17)

add_executable(25_H2_1 25_H1/1/main.cpp)
add_executable(25_H2_2 25_H2/2/main.cpp)
add_executable(25_H2_3 25_H2/3/main.cpp)
add_executable(25_H2_4 25_H2/4/main.cpp)

add_executable(25_H1_1 25_H1/1/main.cpp)
add_executable(25_H1_2 25_H1/2/main.cpp)
add_executable(25_H1_3 25_H1/3/main.cpp)
add_executable(25_H1_4 25_H1/4/main.cpp)

add_executable(24_H2_1 24_H1/1/main.cpp)
add_executable(24_H2_2 24_H2/2/main.cpp)
add_executable(24_H2_3 24_H2/3/main.cpp)
add_executable(24_H2_4 24_H2/4/main.cpp)

add_executable(24_H1_1 24_H1/1/main.cpp)
add_executable(24_H1_2 24_H1/2/main.cpp)
add_executable(24_H1_3 24_H1/3/main.cpp)
add_executable(24_H1_4 24_H1/4/main.cpp)

add_executable(23_H2_1 23_H1/1/main.cpp)
add_executable(23_H2_2 23_H2/2/main.cpp)
add_executable(23_H2_3 23_H2/3/main.cpp)
add_executable(23_H2_4 23_H2/4/main.cpp)

add_executable(23_H1_1 23_H1/1/main.cpp)
add_executable(23_H1_2 23_H1/2/main.cpp)
add_executable(23_H1_3 23_H1/3/main.cpp)
add_executable(23_H1_4 23_H1/4/main.cpp)

add_executable(22_H2_1 22_H2/1/main.cpp)
add_executable(22_H2_2 22_H2/2/main.cpp)
add_executable(22_H2_3 22_H2/3/main.cpp)
add_executable(22_H2_4 22_H2/4/main.cpp)

add_executable(22_H1_1 22_H1/1/main.cpp)
add_executable(22_H1_2 22_H1/2/main.cpp)
add_executable(22_H1_3 22_H1/3/main.cpp)
add_executable(22_H1_4 22_H1/4/main.cpp)

add_executable(21_H2_1 21_H2/1/main.cpp)
add_executable(21_H2_2 21_H2/2/main.cpp)
add_executable(21_H2_3 21_H2/3/main.cpp)
add_executable(21_H2_4 21_H2/4/main.cpp)

add_executable(21_H1_1 21_H1/1/main.cpp)
add_executable(21_H1_2 21_H1/2/main.cpp)
add_executable(21_H1_3 21_H1/3/main.cpp)
add_executable(21_H1_4 21_H1/4/main.cpp)

add_executable(20_H2_1 20_H2/1/main.cpp)
add_executable(20_H2_2 20_H2/2/main.cpp)
add_executable(20_H2_3 20_H2/3/main.cpp)
add_executable(20_H2_4 20_H2/4/main.cpp)

add_executable(20_H1_1 20_H1/1/main.cpp)
add_executable(20_H1_2 20_H1/2/main.cpp)
add_executable(20_H1_3 20_H1/3/main.cpp)
add_executable(20_H1_4 20_H1/4/main.cpp)

add_executable(19_H2_1 19_H2/1/main.cpp)
add_executable(19_H2_2 19_H2/2/main.cpp)
add_executable(19_H2_3 19_H2/3/main.cpp)
add_executable(19_H2_4 19_H2/4/main.cpp)

add_executable(19_H1_1 19_H1/1/main.cpp)
add_executable(19_H1_2 19_H1/2/main.cpp)
add_executable(19_H1_3 19_H1/3/main.cpp)
add_executable(19_H1_4 19_H1/4/main.cpp)